--- a/PUMa/requirements.txt
+++ b/PUMa/requirements.txt
@@ -1,8 +1,13 @@
 appnope==0.1.0
 bleach==2.1.2
 cycler==0.10.0
+cymem==1.31.2
+cytoolz==0.8.2
 decorator==4.2.1
+dill==0.2.7.1
+en-core-web-sm==2.0.0
 entrypoints==0.2.3
+graphviz==0.8.3
 hide-code==0.5.0
 html5lib==1.0.1
 ipykernel==4.8.2
@@ -19,33 +24,52 @@ jupyter-core==4.4.0
 MarkupSafe==1.0
 matplotlib==2.1.2
 mistune==0.8.3
+msgpack-numpy==0.4.1
+msgpack-python==0.5.6
+murmurhash==0.28.0
 nbconvert==5.3.1
 nbformat==4.4.0
+networkx==2.1
 notebook==5.4.0
 numpy==1.14.1
+nxpd==0.2.0
 pandas==0.22.0
 pandocfilters==1.4.2
 parso==0.1.1
+pathlib==1.0.1
 pdfkit==0.6.1
 pexpect==4.4.0
 pickleshare==0.7.4
+plac==0.9.6
+preshed==1.0.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
+py-d3==0.3.0
 Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2018.3
 pyzmq==17.0.0
 qtconsole==4.3.1
+regex==2017.4.5
+scikit-learn==0.19.1
 scipy==1.0.0
 seaborn==0.8.1
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
+sklearn==0.0
+spacy==2.0.11
+termcolor==1.1.0
 terminado==0.8.1
 testpath==0.3.1
+thinc==6.10.2
+toolz==0.9.0
 tornado==4.5.3
+tqdm==4.23.3
 traitlets==4.3.2
+ujson==1.35
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.1.4
+wrapt==1.10.11
